--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clean": "rimraf dist",
     "compile": "npm run clean && cross-env NODE_ENV=production babel src/components --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,stories.js,__snapshots__"
   },
+  "files": ["dist/**/*"],
   "eslintConfig": {
     "extends": [
       "react-app",
