--- a/package.json
+++ b/package.json
@@ -9,11 +9,40 @@
   "main": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "scripts": {
-    "build": "npm run build:esm && npm run build:cjs",
+    "start": "react-app-rewired start",
+    "build": "npm run build:esm && npm run build:cjs && npm run build:css",
+    "build:dev": "npm run build && yalc push",
     "build:cjs": "tsc --module commonjs --outDir lib/csj",
-    "build:esm": "tsc --module esnext --outDir lib/esm"
+    "build:esm": "tsc --module esnext --outDir lib/esm",
+    "build:css": "npm run tailwind:build && npm run sass",
+    "tailwind:build": "npx tailwindcss -i ./src/styles/index.scss --config tailwind.config.js -o ./src/styles/index.out.scss",
+    "sass": "npx sass  --no-source-map src/styles/index.out.scss lib/esm/styles/index.css"
   },
   "devDependencies": {
+    "react-app-rewired": "^2.2.1",
+    "sass": "^1.49.9",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2"
+  },
+  "peerDependencies": {
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "axios": "^0.26.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
