--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pensil-inc/web-sdk",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "private": false,
   "repository": {
     "type": "git",
@@ -25,11 +25,11 @@
     "react-app-rewired": "^2.2.1",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8"
   },
   "peerDependencies": {
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
