--- a/package.json
+++ b/package.json
@@ -14,27 +14,34 @@
     "build:dev": "npm run build && yalc push",
     "build:cjs": "tsc --module commonjs --outDir lib/csj",
     "build:esm": "tsc --module esnext --outDir lib/esm",
-    "build:css": "npm run tailwind:build && npm run css:build:custom && npm run sass && npm run css:build:cleanup",
+    "build:css": "npm run tailwind:build && npm run css:build:custom && run css:build:theme && npm run sass && npm run css:build:cleanup",
     "tailwind:build": "npx tailwindcss -i ./src/styles/tailwind.scss --config tailwind.config.js -o ./src/styles/tailwind.style.scss",
     "css:build:custom": "npx sass --no-source-map src/styles/custom.scss:src/styles/custom.style.scss",
+    "css:build:theme": "npx sass --no-source-map src/styles/theme.scss:src/styles/theme.style.scss",
     "sass": "npx sass  --no-source-map src/styles/index.scss lib/esm/styles/index.css",
-    "css:build:cleanup": "rm src/styles/custom.style.scss && rm src/styles/tailwind.style.scss",
-    "export:assets": "cp -r src/assets lib/esm/assets"
+    "css:build:cleanup": "rm src/styles/custom.style.scss && rm src/styles/tailwind.style.scss && rm src/styles/theme.style.scss",
+    "export:assets": "cp -r src/assets lib/esm"
   },
   "devDependencies": {
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-linkify": "^1.0.1",
+    "@types/remarkable": "^2.0.3",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8"
+    "typescript": "^4.6.2"
   },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "axios": "^0.26.1"
+    "axios": "^0.26.1",
+    "classnames": "^2.2.6",
+    "moment": "^2.29.2",
+    "react-linkify": "*",
+    "remarkable": "^2.0.1"
   },
   "browserslist": {
     "production": [
