--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "types": "./lib/esm/index.d.ts",
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "npm run build:esm && npm run build:cjs && npm run build:css && npm run export:assets",
+    "build": "npm run build:esm && npm run build:cjs && npm run build:css && npm run export:assets && npm run export:declarations",
     "build:dev": "npm run build && yalc push",
     "build:cjs": "tsc --module commonjs --outDir lib/csj",
     "build:esm": "tsc --module esnext --outDir lib/esm",
@@ -27,6 +27,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-linkify": "^1.0.1",
     "@types/remarkable": "^2.0.3",
+    "@types/turndown": "^5.0.1",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
@@ -37,11 +38,18 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
+    "@chaharshubhamsingh/ckeditor5-custom-build": "^0.0.1",
+    "@ckeditor/ckeditor5-build-balloon": "^29.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^27.1.0",
+    "@ckeditor/ckeditor5-mention": "^30.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
+    "@types/ckeditor": "^4.9.10",
     "axios": "^0.26.1",
     "classnames": "^2.2.6",
     "moment": "^2.29.2",
     "react-linkify": "*",
-    "remarkable": "^2.0.1"
+    "remarkable": "^2.0.1",
+    "turndown": "^7.1.1"
   },
   "browserslist": {
     "production": [
