--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pensil-inc/web-sdk",
-  "version": "0.1.18",
+  "version": "0.1.18-beta.2",
   "private": false,
   "repository": {
     "type": "git",
